# order_book

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/: copilot-instructions.md
src/: day_order_pruner.cpp  day_order_pruner.h  main.cpp  match_types.h  matcher.cpp  matcher.h  order.h  order_book.cpp  order_book.h  price_level.h  trade.h
tests/bench/: bench_matchers.cpp  bench_order_book.cpp
tests/unit/: test_matcher.cpp  test_order_book.cpp  test_pruner.cpp
